# Network-Intrusion-Detection-Systems-NIDS-

./: .gitattributes  README.md
Python/Notebooks/Python/models/: scaler.pkl
Python/Notebooks/src/: train_models.ipynb
Python/src/: Analytics.py  database.py  detector.py  main.py  receiver.py  utils.py
Python/src/models/: feature_meta.json  isolation_forest.pkl  one_class_svm.pkl
RustSniffer/: Cargo.toml
RustSniffer/.cargo/: config.toml
RustSniffer/src/: capture.rs  features.rs  main.rs  sender.rs  utils.rs
