[package]
name = "RustSniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.3.0"
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
chrono ={ version = "0.4", features = ["serde"] }


